[WHLSL] checkRecursiveType should not have exponential complexity. https://bugs.webkit.org/show_bug.cgi?id=199835

Reviewed by Myles Maxfield.

The change is very similar to that in https://bugs.webkit.org/show_bug.cgi?id=199688.
Just keep track of which types have already been visited, and don't visit them again.

No new tests as there is no intended functional change.

* Modules/webgpu/WHLSL/WHLSLRecursiveTypeChecker.cpp:
(WebCore::WHLSL::RecursiveTypeChecker::visit):
(WebCore::WHLSL::checkRecursiveTypes):


Canonical link: https://commits.webkit.org/213769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247549 268f45cc-cd09-0410-ab3c-d52691b4dbfc