Source/WebCore/Modules/webgpu/WHLSL/WHLSLRecursiveTypeChecker.cpp
@@ -28,7 +28,6 @@
 
 #if ENABLE(WEBGPU)
 
-#include "WHLSLScopedSetAdder.h"
 #include "WHLSLStructureDefinition.h"
 #include "WHLSLTypeDefinition.h"
 #include "WHLSLTypeReference.h"
@@ -41,52 +40,61 @@ namespace WHLSL {
 
 class RecursiveTypeChecker : public Visitor {
 public:
-    virtual ~RecursiveTypeChecker() = default;
-
     void visit(AST::TypeDefinition&) override;
     void visit(AST::StructureDefinition&) override;
     void visit(AST::TypeReference&) override;
     void visit(AST::ReferenceType&) override;
 
 private:
-    using Adder = ScopedSetAdder<AST::Type*>;
-    HashSet<AST::Type*> m_types;
+    HashSet<AST::Type*> m_startedVisiting;
+    HashSet<AST::Type*> m_finishedVisiting;
 };
+
+#define START_VISITING(t) \
+do { \
+    if (m_finishedVisiting.contains(t)) \
+        return; \
+    auto resultStartedVisiting = m_startedVisiting.add(t); \
+    if (!resultStartedVisiting.isNewEntry) { \
+        setError(); \
+        return; \
+    } \
+} while (false);
+
+#define END_VISITING(t) \
+do { \
+    auto resultFinishedVisiting = m_finishedVisiting.add(t); \
+    ASSERT_UNUSED(resultFinishedVisiting, resultFinishedVisiting.isNewEntry); \
+} while (false);
 
 void RecursiveTypeChecker::visit(AST::TypeDefinition& typeDefinition)
 {
-    Adder adder(m_types, &typeDefinition);
-    if (!adder.isNewEntry()) {
-        setError();
-        return;
-    }
+    START_VISITING(&typeDefinition);
 
     Visitor::visit(typeDefinition);
+
+    END_VISITING(&typeDefinition);
 }
 
 void RecursiveTypeChecker::visit(AST::StructureDefinition& structureDefinition)
 {
-    Adder adder(m_types, &structureDefinition);
-    if (!adder.isNewEntry()) {
-        setError();
-        return;
-    }
+    START_VISITING(&structureDefinition);
 
     Visitor::visit(structureDefinition);
+
+    END_VISITING(&structureDefinition);
 }
 
 void RecursiveTypeChecker::visit(AST::TypeReference& typeReference)
 {
-    Adder adder(m_types, &typeReference);
-    if (!adder.isNewEntry()) {
-        setError();
-        return;
-    }
+    START_VISITING(&typeReference);
 
     for (auto& typeArgument : typeReference.typeArguments())
         checkErrorAndVisit(typeArgument);
     if (typeReference.maybeResolvedType()) // FIXME: https://bugs.webkit.org/show_bug.cgi?id=198161 Shouldn't we know by now whether the type has been resolved or not?
         checkErrorAndVisit(typeReference.resolvedType());
+
+    END_VISITING(&typeReference);
 }
 
 void RecursiveTypeChecker::visit(AST::ReferenceType&)
@@ -96,7 +104,10 @@ void RecursiveTypeChecker::visit(AST::ReferenceType&)
 bool checkRecursiveTypes(Program& program)
 {
     RecursiveTypeChecker recursiveTypeChecker;
-    recursiveTypeChecker.checkErrorAndVisit(program);
+    for (auto& typeDefinition : program.typeDefinitions())
+        recursiveTypeChecker.checkErrorAndVisit(typeDefinition);
+    for (auto& structureDefinition : program.structureDefinitions())
+        recursiveTypeChecker.checkErrorAndVisit(structureDefinition);
     return !recursiveTypeChecker.error();
 }
 
